t-koma-gateway/tests/snapshots/snapshot_tests__factual_query.snap
---
source: t-koma-gateway/tests/snapshot_tests.rs
assertion_line: 52
expression: response
---
{
  "id": "[id]",
  "type": "message",
  "role": "assistant",
  "model": "claude-sonnet-4-5-20250929",
  "content": [
    {
      "type": "text",
      "text": "4"
    }
  ],
  "usage": {
    "input_tokens": 20,
    "output_tokens": 5
  }
}
