t-koma-gateway/tests/snapshots/snapshot_tests__list_response.snap
---
source: t-koma-gateway/tests/snapshot_tests.rs
assertion_line: 77
expression: response
---
{
  "id": "[id]",
  "type": "message",
  "role": "assistant",
  "model": "claude-sonnet-4-5-20250929",
  "content": [
    {
      "type": "text",
      "text": "Red, blue, green."
    }
  ],
  "usage": {
    "input_tokens": 17,
    "output_tokens": 9
  }
}
