t-koma-gateway/tests/snapshots/snapshot_tests__simple_greeting.snap
---
source: t-koma-gateway/tests/snapshot_tests.rs
assertion_line: 27
expression: response
---
{
  "id": "[id]",
  "type": "message",
  "role": "assistant",
  "model": "claude-sonnet-4-5-20250929",
  "content": [
    {
      "type": "text",
      "text": "Hello from Claude!"
    }
  ],
  "usage": {
    "input_tokens": 19,
    "output_tokens": 7
  }
}
