t-koma-gateway/tests/snapshots/snapshot_tests__tool_use_shell.snap
---
source: t-koma-gateway/tests/snapshot_tests.rs
expression: response
---
{
  "id": "[id]",
  "type": "message",
  "role": "assistant",
  "model": "claude-sonnet-4-5-20250929",
  "content": [
    {
      "type": "tool_use",
      "id": "[tool_use_id]",
      "name": "run_shell_command",
      "input": {
        "command": "ls -la"
      }
    }
  ],
  "stop_reason": "tool_use",
  "stop_sequence": null,
  "usage": {
    "input_tokens": 594,
    "output_tokens": 57
  }
}
